# agentic-orchestrator

./: .env.example  .gitignore  CHANGELOG.ko.md  CHANGELOG.md  CLAUDE.md  PROGRESS.md  README.ko.md  README.md  config.yaml  ecosystem.config.js  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  idea.yml  plan.yml
.github/workflows/: backlog.yml  ci.yml  orchestrator.yml
data/trends/: idea_links.json
docs/: labels.md  pipeline.md
projects/plan-ai-powered-dynamic-nft-portfolio-management/: .moss-project.json  README.md  docker-compose.yml
projects/plan-ai-powered-quantum-wallet-resilience/: .moss-project.json  PLAN.md  README.md  docker-compose.yml
projects/plan-claude-code-agent-driven-defi-insurance/: .moss-project.json  PLAN.md  README.md  docker-compose.yml
projects/plan-claude-powered-dynamic-liquidity-aggregation/: .moss-project.json  README.md  docker-compose.yml
projects/plan-claude-powered-dynamic-smart-contract/: .moss-project.json  PLAN.md  README.md  docker-compose.yml
projects/plan-claude-powered-ens-domain-orchestration/: .moss-project.json  README.md  docker-compose.yml
projects/plan-claude-powered-guardian-agent-dynamic-risk/: .moss-project.json  PLAN.md  README.md  docker-compose.yml
projects/plan-claude-powered-rave-governance-agent-dynamic/: .moss-project.json  PLAN.md  README.md  docker-compose.yml
projects/plan-dark-islands-theme-enhanced-with-blockchain/: .moss-project.json  PLAN.md  README.md  docker-compose.yml
projects/plan-decentralized-ai-model-training-platform/: .moss-project.json  PLAN.md  README.md  docker-compose.yml
projects/plan-dynamic-ens-portfolio-nft-insurance/: .moss-project.json  PLAN.md  README.md  docker-compose.yml
projects/plan-explainability-dashboard-providing/: .moss-project.json  README.md  docker-compose.yml
projects/plan-gpt-4-powered-mossland-nft-valuation-trading/: .moss-project.json  README.md  docker-compose.yml
projects/plan-gpt-5-based-decentralized-nft-generation/: .moss-project.json  PLAN.md  README.md  docker-compose.yml
projects/plan-gpt-5-based-defi-position-auto-rebalancing/: .moss-project.json  PLAN.md  README.md  docker-compose.yml
projects/plan-gpt-5-enhanced-rwa-portfolio-construction/: .moss-project.json  PLAN.md  README.md  docker-compose.yml
projects/plan-gpt-5-powered-automated-liquidity/: .moss-project.json  PLAN.md  README.md  (+1 more)
prompts/: ideation.md  planning_architecture.md  planning_prd.md  planning_tasks.md  review.md
scripts/: migrate_to_db.py
tests/: test_api.py  test_backlog.py  test_db_resilience.py  test_debate.py  test_orchestrator.py  test_pagination.py  test_plan_parser.py  test_project_repair.py  test_project_verification_gate.py  test_project_verifier.py  test_providers.py  test_signals.py  test_state.py  test_translator.py  test_utils.py
website/: README.md  package-lock.json  package.json  pnpm-lock.yaml
(+1125 files in other folders)
