[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-orchestrator"
version = "0.6.8"
description = "Autonomous orchestration system for Mossland micro Web3 service development"
readme = "README.md"
license = {text = "MIT"}
# The project generator emits f-strings that reuse the outer quote inside the
# replacement field (PEP 701), which is only valid syntax on Python 3.12+.
requires-python = ">=3.12"
authors = [
    {name = "Mossland", email = "dev@mossland.org"}
]
keywords = ["ai", "orchestration", "web3", "mossland", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    # Current Google GenAI SDK; legacy "google-generativeai" is EOL.
    "google-genai>=1.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "feedparser>=6.0.0",
    # Imported across db/ and api/ but were missing from the dependency list,
    # which broke `pip install` based test collection on CI.
    "sqlalchemy>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ao = "agentic_orchestrator.cli:main"

[project.urls]
Homepage = "https://github.com/MosslandOpenDevs/agentic-orchestrator"
Repository = "https://github.com/MosslandOpenDevs/agentic-orchestrator"
Issues = "https://github.com/MosslandOpenDevs/agentic-orchestrator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Bug-catching + import hygiene rules. `UP` (pyupgrade) is intentionally not
# enforced: the codebase consistently uses typing.List/Dict/Optional style, and
# mass-rewriting annotations would be churn with no behavior change.
select = ["E", "F", "W", "I", "N", "B", "C4"]
ignore = [
    "E501",  # line length — not enforced (long URLs/prompts are common)
    "B008",  # FastAPI Depends()/Query() in argument defaults is the required pattern
    "E402",  # a few modules import after runtime setup (logging/sys.path) on purpose
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # package re-exports are not "unused"
